bad/incr_field_class_new_class.example_compiler_output
ERROR
[1mbad/incr_field_class_new_class.lat:9:13: [1;31merror: [0;1m++ operator is valid only for integer values not `Y`[m
	(new C).fld++;
	           [1;32m^[m
